FIX: result radius index + story overflow scrollable

--- a/Projet_Indus_Start/public/css/Reseau/styles.css
+++ b/Projet_Indus_Start/public/css/Reseau/styles.css
@@ -105,6 +105,10 @@ section > h1.titlesource {
   margin-top: 300px;
 }
 
+#secfin {
+  height: 80%;
+}
+
 #fixpart {
   position: fixed;
   z-index: 1;
